feat: JacksonConfig 구현 및 NewsFacade 제거(#55)